# defensive-systems-programming

./: .gitignore  README.md
mmn11/: mmn11.sln
mmn11/mmn11/: Audio.cpp  Audio.h  BusinessUser.cpp  BusinessUser.h  FriendAlreadyExistsException.cpp  FriendAlreadyExistsException.h  Media.h  Message.cpp  Message.h  NotAFriendException.cpp  NotAFriendException.h  Photo.cpp  Photo.h  Post.cpp  Post.h  USocial.cpp  USocial.h  User.cpp  User.h  Video.cpp  Video.h  main.cpp  mmn11.vcxproj  mmn11.vcxproj.filters
mmn11/question1/: question1.cpp  question1.sln  תשובה.docx  (+1 more)
mmn15/: .gitignore  README.md
mmn15/server/: README.md  cipher.py  client_handler.py  config.py  crc.py  defensive.db  errors.py  exceptions.py  main.py  protocol.py  pyproject.toml  request.py  request_router.py  server.py  server_errors.py
mmn15/server/dal/: db.py  db_connection.py
mmn15/server/dal/models/: base.py  client.py  file.py
mmn15/server/dal/tables/: clients.py  files.py
mmn15/server/request_handlers/: base.py  common.py  exchange_keys.py  file_upload.py  invalid_crc.py  invalid_crc_abort.py  login.py  register.py  retry_connection.py  valid_crc.py
mmn15/server/src/: client_handler.py  config.py  errors.py  main.py  protocol.py  request_router.py  server.py
mmn15/server/src/dal/: db_connection.py  server_db.py
mmn15/server/src/dal/models/: base.py  client.py  file.py
mmn15/server/src/dal/tables/: clients.py  files.py
mmn15/server/src/request_handlers/: base.py  common.py  exchange_keys.py  file_upload.py  invalid_crc.py  invalid_crc_abort.py  login.py  register.py  valid_crc.py
(+69 files in other folders)
